fix jump to cfa node from arg node scroll issue. Added missing cfa node polygon css class
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@25758 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/src/org/sosy_lab/cpachecker/core/counterexample/report.css
+++ b/src/org/sosy_lab/cpachecker/core/counterexample/report.css
@@ -184,6 +184,11 @@ body {
 	outline: #8B008B solid thick !important;
 }
 
+.marked-cfa-node > polygon {
+	stroke: #8B008B !important;
+	stroke-width: 5px !important;
+}
+
 .marked-cfa-node > circle {
 	stroke: #8B008B !important;
 	stroke-width: 5px !important;
